// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MetricCard Component:  should render correctly with all props 1`] = `
<div
  className="MetricCard"
>
  <Panel
    className="Panel"
    primary={true}
  >
    <h1
      className="Value"
    >
      Card Value
    </h1>
    <h6
      className="Label"
    >
      Card Label
       
      <Tooltip
        bottom={true}
        content="Tooltip Content"
        dark={true}
        forcePosition={false}
        horizontalOffset="-1.1rem"
        preferredDirection={
          Object {
            "bottom": true,
            "left": false,
            "right": true,
            "top": false,
          }
        }
        right={true}
      >
        <InfoOutline />
      </Tooltip>
    </h6>
  </Panel>
</div>
`;

exports[`MetricCard Component:  should render without tooltip 1`] = `
<div
  className="MetricCard"
>
  <Panel
    className="Panel"
    primary={true}
  >
    <h1
      className="Value"
    >
      Card Value
    </h1>
    <h6
      className="Label"
    >
      Card Label
       
    </h6>
  </Panel>
</div>
`;
